# playground

./: main.lua
2025-04-15_color-blocks/: graphics.lua  main.lua
2025-04-20_godot-snake/: main.gd  payer-input.gd  payer-input.gd.uid  project.godot
2025-04-20_godot-snake/scripts/: field.gd  field.gd.uid  main.gd  snake.gd  ticker.gd
2025-07-22_stack/: .gitignore  Cargo.toml
2025-07-22_stack/src/: main.rs  runtime.rs
2025-07-22_stack/src/compiler/: backend.rs  frontend.rs  parser.rs  tokenizer.rs
2025-07-22_stack/wasm-reference/src/: lib.rs
2025-08-02_language-design/: README.md
2025-08-02_monobloc/: .gitignore  Cargo.toml  README.md  shell.nix
2025-08-02_monobloc/examples/: bindings.mbl  blocks.mbl  integers.mbl  intrinsics.mbl  multiple-whitespace-characters-between-tokens.mbl  show.mbl  single-number.mbl  stack.mbl
2025-08-02_monobloc/examples/intrinsics/: arithmetic.mbl  bitwise-operations.mbl  comparison.mbl
2025-08-02_monobloc/src/: args.rs  compiler.rs  main.rs  runtime.rs  tests.rs
2025-08-02_monobloc/src/compiler/: inferrer.rs  input_code.rs  intrinsics.rs  ir.rs  mod.rs  nodes.rs  resolver.rs  syntax.rs  tokens.rs  vec.rs
2025-08-02_monobloc/src/tests/: mod.rs
2025-09-17_stack-assembly/: Cargo.toml
2025-09-17_stack-assembly/spec/stack/: push.stack
2025-09-17_stack-assembly/src/: evaluate.rs  main.rs  node.rs  nodes.rs  spec.rs  stack.rs
2025-12-17_ergot-demo/: .gitignore  Cargo.toml  README.md  build.rs
2025-12-17_ergot-demo/.cargo/: config.toml
2025-12-17_ergot-demo/cli/: Cargo.toml
2025-12-17_ergot-demo/cli/src/: main.rs
2025-12-17_ergot-demo/firmware/: Cargo.toml
2025-12-17_ergot-demo/firmware/src/: main.rs
2025-12-17_ergot-demo/shared/: Cargo.toml
2025-12-17_ergot-demo/shared/src/: lib.rs
2025-12-17_ergot-demo/src/: main.rs
2025-12-25_stack-snake/: Cargo.toml  snake.stack
2025-12-25_stack-snake/src/: io.rs  main.rs  script.rs
archive/2025-04-05_love-tetris/: main.lua
archive/2025-04-20_color-blocks/: graphics.lua  main.lua
archive/2025-06-09_godot-snake/: main.tscn
archive/2025-06-09_godot-snake/scripts/: main.gd  snake.gd  snake.gd.uid  ticker.gd.uid
archive/2025-08-22_stack/output/: reference.wasm
archive/2025-08-22_stack/src/: runtime.rs
archive/2025-08-22_stack/wasm-reference/: Cargo.toml
archive/2025-10-06_stack-assembly/: Cargo.toml
archive/2025-10-06_stack-assembly/src/: evaluate.rs  stack.rs
archive/2025-10-27_stack-assembly/: README.md
archive/2025-10-27_stack-assembly/src/: lib.rs  (+5 more)
archive/2026-01-16_ergot-demo/: .gitignore  README.md  shell.nix
archive/2026-06-01_monobloc/: Cargo.toml
archive/2026-06-03_stack-snake/: .gitignore  TASKS.md  snake.stack
godot-snake/: icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot
(+120 files in other folders)
