[package]
name = "ergot-demo"
edition = "2024"
publish = false

[dependencies]
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
panic-halt = "1.0.0"
smart-leds = "0.4.0"

[dependencies.embassy-executor]
version = "0.9.1"
features = ["arch-cortex-m", "executor-thread"]

[dependencies.embassy-rp]
version = "0.9.0"
features = ["critical-section-impl", "rp2040"]

[build-dependencies]
anyhow = "1.0.100"
