[package]
name = "stack-snake"
edition = "2024"
publish = false

[dependencies]
anyhow = "*"
crossbeam-channel = "*"
softbuffer = "*"
winit = "*"

[dependencies.notify]
version = "*"
features = ["crossbeam-channel"]

[dependencies.stack-assembly]
git = "https://github.com/hannobraun/stack-assembly.git"
