[package]
name = "cli"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"

[dependencies.ergot]
git = "https://github.com/jamesmunns/ergot.git"
rev = "87982f0"
features = ["nusb-v0_1", "tokio-std"]

[dependencies.shared]
path = "../shared"

[dependencies.tokio]
version = "1.48.0"
features = ["full"]
