[package]
name = "firmware"
edition = "2024"
publish = false

[dependencies]
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
mutex = "1.0.2"
panic-halt = "1.0.0"
smart-leds = "0.4.0"

[dependencies.embassy-executor]
version = "0.9.1"
features = ["arch-cortex-m", "executor-thread"]

[dependencies.embassy-rp]
version = "0.9.0"
features = ["critical-section-impl", "rp2040", "time-driver"]

[dependencies.ergot]
version = "0.12.0"
features = ["embassy-usb-v0_5"]

[dependencies.portable-atomic]
version = "1.12.0"
features = ["critical-section"]

[build-dependencies]
anyhow = "1.0.100"
