[package]
name = "firmware"
edition = "2024"
publish = false

[dependencies]
bbq2 = "0.4.2"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
embassy-usb = "0.5.1"
mutex = "1.0.2"
panic-halt = "1.0.0"
smart-leds = "0.4.0"
static_cell = "2.1.1"

[dependencies.embassy-executor]
version = "0.9.1"
features = ["arch-cortex-m", "executor-thread"]

[dependencies.embassy-rp]
version = "0.9.0"
features = ["critical-section-impl", "rp2040", "time-driver"]

# Depending on the Git version to get this commit:
# https://github.com/jamesmunns/ergot/commit/25392ff92eae43b3307d1f0ea2a5a8759265b11a
[dependencies.ergot]
git = "https://github.com/jamesmunns/ergot.git"
rev = "87982f0"
features = ["embassy-usb-v0_5"]

[dependencies.portable-atomic]
version = "1.12.0"
features = ["critical-section"]

[build-dependencies]
anyhow = "1.0.100"
